[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/black.png" type="Texture" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://edge.tscn" type="PackedScene" id=3]
[ext_resource path="res://spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://game.gd" type="Script" id=5]
[ext_resource path="res://hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/playerLife1_blue.png" type="Texture" id=7]
[ext_resource path="res://game_font.tres" type="DynamicFont" id=8]

[node name="game" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
margin_right = 1980.0
margin_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -47.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 81.0
margin_top = 60.0
margin_right = 217.0
margin_bottom = 108.0
rect_scale = Vector2( 2, 2 )

[node name="life" type="TextureRect" parent="UI/HBoxContainer"]
margin_right = 33.0
margin_bottom = 48.0
texture = ExtResource( 7 )

[node name="life2" type="TextureRect" parent="UI/HBoxContainer"]
margin_left = 37.0
margin_right = 70.0
margin_bottom = 48.0
texture = ExtResource( 7 )

[node name="life3" type="TextureRect" parent="UI/HBoxContainer"]
margin_left = 74.0
margin_right = 107.0
margin_bottom = 48.0
texture = ExtResource( 7 )

[node name="mission" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -26.0
margin_right = 239.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 8 )
text = "protect the fleet"

[node name="Timer" type="Timer" parent="UI/mission"]
autostart = true

[node name="HBoxContainer2" type="HBoxContainer" parent="UI"]
margin_left = 1557.0
margin_top = 36.0
margin_right = 1768.0
margin_bottom = 88.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/HBoxContainer2"]
margin_right = 175.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 8 )
text = "Score:"

[node name="score" type="Label" parent="UI/HBoxContainer2"]
margin_left = 179.0
margin_right = 211.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 8 )
text = "0"

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 969, 781 )

[node name="edge" parent="." instance=ExtResource( 3 )]

[node name="edge2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1814, -4 )

[node name="spawner" parent="." instance=ExtResource( 4 )]

[node name="hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 956, 1066 )

[connection signal="timeout" from="UI/mission/Timer" to="." method="_on_Timer_timeout"]
[connection signal="scored" from="spawner" to="." method="_on_spawner_scored"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
